# llm-kb-processor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  technical_spec.md
.github/workflows/: ci-cd.yml  deploy.yml
app/: CLAUDE.md  __init__.py  __main__.py  bot.py  db.py  enums.py  models.py  notifier.py  prompts.py  quality_gate.py  scheduler.py  settings.py  utils.py  worker_ingest.py  worker_resources.py
app/cron/: CLAUDE.md  lint.py  sweeper.py  synthesis.py
app/handlers/: CLAUDE.md  commands.py  messages.py  start.py  status.py
app/parsers/: CLAUDE.md  base.py  dispatch.py  md.py  pdf.py  proxy_fetcher.py  text.py  voice.py  web.py  youtube.py
app/workers/: CLAUDE.md  base.py  ingest.py  resources.py
docs/initial/: 00-overview.md  01-architecture.md  02-data-model.md  03-pipeline-states.md  04-telegram-bot.md  05-resource-parsers.md  06-quality-gate.md  07-ingest-agent.md  08-cron-jobs.md  09-prompts.md  10-knowledge-base.md  11-deployment.md  12-error-handling.md
migrations/: 0001_init.sql
scripts/: init-wiki.sh  vps-init.sh
tests/: conftest.py  test_bot.py  test_cron.py  test_db.py  test_ingest.py  test_models.py  test_parsers.py  test_pipeline.py  test_quality_gate.py
