[project]
name = "llm-kb"
version = "0.1.0"
description = "Personal LLM-curated knowledge base"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "claude-agent-sdk>=0.1.0",
    "pydantic-settings>=2.0.0",
    "trafilatura>=2.0.0",
    "pymupdf4llm>=0.0.1",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2024.0.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "aiogram>=3.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
